--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MediCalc"
         tools:targetApi="31">
         <activity
+            android:name=".MadurezCutaneaActivity"
+            android:exported="false" />
+        <activity
             android:name=".DubowitzActivity"
             android:exported="false" />
         <activity
@@ -22,7 +25,6 @@
             android:name=".MenuActivity"
             android:exported="false" />
         <activity android:name=".HistorialActivity" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
