Agrega funcionalidad del Test de Liggins y Howie

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MediCalc"
         tools:targetApi="31">
         <activity
+            android:name=".LigginsYHowieActivity"
+            android:exported="false" />
+        <activity
             android:name=".MadurezCutaneaActivity"
             android:exported="false" />
         <activity
