Añadir configuración para conexión a Firebase Auth y Firestore. Implementar Login, logout y AuthValidation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,12 @@
         <activity
             android:name=".MenuActivity"
             android:exported="false" />
-        <activity android:name=".HistorialActivity" />
+        <activity
+            android:name=".HistorialActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
